# SquishTests

./: .gitignore  CMakeLists.txt  README.md  Task.cpp  Task.h  backend.cpp  backend.h  main.cpp  main.qml  qml.qrc  taskfilterproxymodel.cpp  taskfilterproxymodel.h  tasksmodel.cpp  tasksmodel.h  tasksstatswindow.cpp  tasksstatswindow.h
